--- a/client/package.json
+++ b/client/package.json
@@ -22,6 +22,8 @@
   },
   "devDependencies": {
     "autoprefixer": "^10",
+    "eslint": "8.54.0",
+    "eslint-config-next": "14.0.3",
     "postcss": "^8",
     "tailwindcss": "^3"
   }
