--- a/client/package.json
+++ b/client/package.json
@@ -11,6 +11,7 @@
   "dependencies": {
     "@reduxjs/toolkit": "^1.9.7",
     "axios": "^1.6.0",
+    "bufferutil": "^4.0.8",
     "emoji-picker-react": "^4.5.6",
     "next": "13.5.6",
     "react": "^18",
