--- a/client/package.json
+++ b/client/package.json
@@ -13,7 +13,7 @@
     "axios": "^1.6.0",
     "bufferutil": "^4.0.8",
     "emoji-picker-react": "^4.5.6",
-    "next": "13.5.6",
+    "next": "^14.0.3",
     "react": "^18",
     "react-dom": "^18",
     "react-hot-toast": "^2.4.1",
